featured image added, styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="grid-container">
         <div class="nav area-border">
             <div class="nav-links">
-                <a href="#">Griot Theater</a>
+                <a href="#" id="griot">Griot Theater</a>
                 <a href="#">Home</a>
                 <a href="#">Featured</a>
                 <a href="#">Actors</a>
@@ -18,7 +18,11 @@
                 <a href="#">Contact</a>
             </div>
         </div>
-        <div class="featured area-border">Featured Shows</div>
+        <div class="featured area-border">
+            
+            <h1>Featured Shows</h1>
+        </div>
+
         <div class="show-cards area-border">Show Cards</div>
         <div class="footer area-border">Footer</div>
     </div>
