--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <div class="grid-container">
         <div class="nav area-border">
+            <div class="griot">
+                <a href="#">Griot Theater</a>
+            </div>
             <div class="nav-links">
-                <a href="#" id="griot">Griot Theater</a>
                 <a href="#">Home</a>
                 <a href="#">Featured</a>
                 <a href="#">Actors</a>
