show content populated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="nav area-border">
+        <div class="nav">
             <div class="griot">
                 <a href="#">Griot Theater</a>
             </div>
@@ -20,12 +20,71 @@
                 <a href="#">Contact</a>
             </div>
         </div>
-        <div class="featured area-border">
+        <div class="featured">
             
             <h1>Featured Shows</h1>
         </div>
 
-        <div class="show-cards area-border">Show Cards</div>
+        <div class="show-cards">
+            <div id="date">
+                <p>February 2024</p>
+            </div>
+            <div class="show">
+                <div class="showimagecontainer">
+                    <img src="./images/a-raisin-in-the-sun-theater-1.png" alt="" class="showimage">
+                </div>
+                <div class="showinfo">
+                    <h3>A Raisin In The Sun</h3>
+                    <p>April 6, 2020 - March 20, 2020</p>
+                    <p>Griot Theatre 233 State St Chicago,IL</p>
+                    <p>$75</p>
+                </div>
+                <div class="showbutton">
+                    <button type="button">Read More</button>
+                </div>
+            </div>
+            <div class="show">
+                <div class="showimagecontainer">
+                    <img src="./images/a-raisin-in-the-sun-theater-1.png" alt="" class="showimage">
+                </div>
+                <div class="showinfo">
+                    <h3>A Raisin In The Sun</h3>
+                    <p>April 6, 2020 - March 20, 2020</p>
+                    <p>Griot Theatre 233 State St Chicago,IL</p>
+                    <p>$75</p>
+                </div>
+                <div class="showbutton">
+                    <button type="button">Read More</button>
+                </div>
+            </div>
+            <div class="show">
+                <div class="showimagecontainer">
+                    <img src="./images/a-raisin-in-the-sun-theater-1.png" alt="" class="showimage">
+                </div>
+                <div class="showinfo">
+                    <h3>A Raisin In The Sun</h3>
+                    <p>April 6, 2020 - March 20, 2020</p>
+                    <p>Griot Theatre 233 State St Chicago,IL</p>
+                    <p>$75</p>
+                </div>
+                <div class="showbutton">
+                    <button type="button">Read More</button>
+                </div>
+            </div><div class="show">
+                <div class="showimagecontainer">
+                    <img src="./images/a-raisin-in-the-sun-theater-1.png" alt="" class="showimage">
+                </div>
+                <div class="showinfo">
+                    <h3>A Raisin In The Sun</h3>
+                    <p>April 6, 2020 - March 20, 2020</p>
+                    <p>Griot Theatre 233 State St Chicago,IL</p>
+                    <p>$75</p>
+                </div>
+                <div class="showbutton">
+                    <button type="button">Read More</button>
+                </div>
+            </div>
+        </div>
         <div class="footer area-border">Footer</div>
     </div>
     
