--- a/index.html
+++ b/index.html
@@ -85,7 +85,31 @@
                 </div>
             </div>
         </div>
-        <div class="footer area-border">Footer</div>
+        <div class="footer">
+                <div class="mapcontainer">
+                    <img src="./images/map.png" alt=""  class="footmap">
+                </div>
+                <div class="footinfo">
+                    <h3>Info</h3>
+            <h6>♦︎ Chicago, IL 80098</h6>
+            <h6>✉︎ example@example.com</h6>
+            <h6>✆ Call Us: 708-555-1212</h6>
+                </div>
+                <div class="footinfo">
+                    <h3>Shows</h3>
+            <h6>The Piano Lessons</h6>
+            <h6>A Raisin In The Sun</h6>
+            <h6>FAME</h6>
+            <h6>The Color Purple</h6>
+                </div>
+                <div class="footinfo">
+                    <h3>Social</h3>
+            <h6>Facebook</h6>
+            <h6>Twitter</h6>
+            <h6>Youtube</h6>
+            <h6>Instagram</h6>
+                </div>
+        </div>
     </div>
     
 </body>
