--- a/index.html
+++ b/index.html
@@ -1,116 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Griot Theater</title>
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
     <div class="grid-container">
-        <div class="nav">
-            <div class="griot">
-                <a href="#">Griot Theater</a>
-            </div>
-            <div class="nav-links">
-                <a href="#">Home</a>
-                <a href="#">Featured</a>
-                <a href="#">Actors</a>
-                <a href="#">Mission</a>
-                <a href="#">Contact</a>
-            </div>
+      <div class="nav">
+        <div class="griot">
+          <a href="#">Griot Theater</a>
         </div>
-        <div class="featured">
-            
-            <h1>Featured Shows</h1>
+        <div class="nav-links">
+          <a href="#">Home</a>
+          <a href="#">Featured</a>
+          <a href="#">Actors</a>
+          <a href="#">Mission</a>
+          <a href="#">Contact</a>
         </div>
+      </div>
+      <div class="featured">
+        <h1>Featured Shows</h1>
+      </div>
 
-        <div class="show-cards">
-            <div id="date">
-                <p>April 2020</p>
-            </div>
-            <div class="show">
-                <div class="showimagecontainer">
-                    <img src="./images/a-raisin-in-the-sun-theater-1.png" alt="" class="showimage">
-                </div>
-                <div class="showinfo">
-                    <h3>A Raisin In The Sun</h3>
-                    <p>April 6, 2020 - March 20, 2020</p>
-                    <p>Griot Theatre 233 State St Chicago,IL</p>
-                    <p>$75</p>
-                </div>
-                <div class="showbutton">
-                    <button type="button">Read More</button>
-                </div>
-            </div>
-            <div class="show">
-                <div class="showimagecontainer">
-                    <img src="./images/a-raisin-in-the-sun-theater-1.png" alt="" class="showimage">
-                </div>
-                <div class="showinfo">
-                    <h3>A Raisin In The Sun</h3>
-                    <p>April 6, 2020 - March 20, 2020</p>
-                    <p>Griot Theatre 233 State St Chicago,IL</p>
-                    <p>$75</p>
-                </div>
-                <div class="showbutton">
-                    <button type="button">Read More</button>
-                </div>
-            </div>
-            <div class="show">
-                <div class="showimagecontainer">
-                    <img src="./images/a-raisin-in-the-sun-theater-1.png" alt="" class="showimage">
-                </div>
-                <div class="showinfo">
-                    <h3>A Raisin In The Sun</h3>
-                    <p>April 6, 2020 - March 20, 2020</p>
-                    <p>Griot Theatre 233 State St Chicago,IL</p>
-                    <p>$75</p>
-                </div>
-                <div class="showbutton">
-                    <button type="button">Read More</button>
-                </div>
-            </div><div class="show">
-                <div class="showimagecontainer">
-                    <img src="./images/a-raisin-in-the-sun-theater-1.png" alt="" class="showimage">
-                </div>
-                <div class="showinfo">
-                    <h3>A Raisin In The Sun</h3>
-                    <p>April 6, 2020 - March 20, 2020</p>
-                    <p>Griot Theatre 233 State St Chicago,IL</p>
-                    <p>$75</p>
-                </div>
-                <div class="showbutton">
-                    <button type="button">Read More</button>
-                </div>
-            </div>
+      <div class="show-cards">
+        <div id="date">
+          <p>April 2020</p>
         </div>
-        <div class="footer">
-                <div class="mapcontainer">
-                    <img src="./images/map.png" alt=""  class="footmap">
-                </div>
-                <div class="footinfo">
-                    <h3>Info</h3>
-            <h6>♦︎ Chicago, IL 80098</h6>
-            <h6>✉︎ example@example.com</h6>
-            <h6>✆ Call Us: 708-555-1212</h6>
-                </div>
-                <div class="footinfo">
-                    <h3>Shows</h3>
-            <h6>The Piano Lessons</h6>
-            <h6>A Raisin In The Sun</h6>
-            <h6>FAME</h6>
-            <h6>The Color Purple</h6>
-                </div>
-                <div class="footinfo">
-                    <h3>Social</h3>
-            <h6>Facebook</h6>
-            <h6>Twitter</h6>
-            <h6>Youtube</h6>
-            <h6>Instagram</h6>
-                </div>
+        <div class="show">
+          <div class="showimagecontainer">
+            <img
+              src="./images/a-raisin-in-the-sun-theater-1.png"
+              alt=""
+              class="showimage"
+            />
+          </div>
+          <div class="showinfo">
+            <h3>A Raisin In The Sun</h3>
+            <p>April 6, 2020 - March 20, 2020</p>
+            <p>Griot Theatre 233 State St Chicago,IL</p>
+            <p>$75</p>
+          </div>
+          <div class="showbutton">
+            <button type="button">Read More</button>
+          </div>
         </div>
+        <div class="show">
+          <div class="showimagecontainer">
+            <img
+              src="./images/a-raisin-in-the-sun-theater-1.png"
+              alt=""
+              class="showimage"
+            />
+          </div>
+          <div class="showinfo">
+            <h3>A Raisin In The Sun</h3>
+            <p>April 6, 2020 - March 20, 2020</p>
+            <p>Griot Theatre 233 State St Chicago,IL</p>
+            <p>$75</p>
+          </div>
+          <div class="showbutton">
+            <button type="button">Read More</button>
+          </div>
+        </div>
+        <div class="show">
+          <div class="showimagecontainer">
+            <img
+              src="./images/a-raisin-in-the-sun-theater-1.png"
+              alt=""
+              class="showimage"
+            />
+          </div>
+          <div class="showinfo">
+            <h3>A Raisin In The Sun</h3>
+            <p>April 6, 2020 - March 20, 2020</p>
+            <p>Griot Theatre 233 State St Chicago,IL</p>
+            <p>$75</p>
+          </div>
+          <div class="showbutton">
+            <button type="button">Read More</button>
+          </div>
+        </div>
+        <div class="show">
+          <div class="showimagecontainer">
+            <img
+              src="./images/a-raisin-in-the-sun-theater-1.png"
+              alt=""
+              class="showimage"
+            />
+          </div>
+          <div class="showinfo">
+            <h3>A Raisin In The Sun</h3>
+            <p>April 6, 2020 - March 20, 2020</p>
+            <p>Griot Theatre 233 State St Chicago,IL</p>
+            <p>$75</p>
+          </div>
+          <div class="showbutton">
+            <button type="button">Read More</button>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="mapcontainer">
+          <img src="./images/map.png" alt="" class="footmap" />
+        </div>
+        <div class="footinfo">
+          <h3>Info</h3>
+          <h6><i class="bi bi-geo-alt-fill">      </i>  Chicago, IL 80098</h6>
+          <h6><i class="bi bi-envelope">      </i>  example@example.com</h6>
+          <h6><i class="bi bi-phone">      </i>  Call Us: 708-555-1212</h6>
+        </div>
+        <div class="footinfo">
+          <h3>Shows</h3>
+          <h6>The Piano Lessons</h6>
+          <h6>A Raisin In The Sun</h6>
+          <h6>FAME</h6>
+          <h6>The Color Purple</h6>
+        </div>
+        <div class="footinfo">
+          <h3>Social</h3>
+          <h6>Facebook</h6>
+          <h6>Twitter</h6>
+          <h6>Youtube</h6>
+          <h6>Instagram</h6>
+        </div>
+      </div>
     </div>
-    
-</body>
-</html> 
+  </body>
+</html>
